last update presentationv2 chargement dynamique via setter